<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0">


        <TextView
                android:text=""
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="131dp"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_gravity="center_horizontal"
                android:background="#4A4545"
                android:textStyle="bold"
                android:textColor="@color/green"
                android:gravity="center"/>

        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="0dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical">

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <Button
                        android:id="@+id/button1"
                        android:text="@string/one"
                        style="@style/button"
                />

                <Button
                        android:id="@+id/button2"
                        android:text="@string/two"
                        style="@style/button"
                />

                <Button
                        android:id="@+id/button3"
                        android:text="@string/three"
                        style="@style/button"
                />

                <Button
                        android:id="@+id/button4"
                        android:text="@string/plus"
                        style="@style/button"
                />
            </TableRow>

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <Button
                        android:id="@+id/button5"
                        android:text="@string/four"
                        style="@style/button"
                />

                <Button
                        android:id="@+id/button6"
                        android:text="@string/five"
                        style="@style/button"
                />

                <Button
                        android:id="@+id/button7"
                        android:text="@string/six"
                        style="@style/button"
                />

                <Button
                        android:id="@+id/button8"
                        android:text="@string/minus"
                        style="@style/button"
                />
            </TableRow>

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <Button
                        android:id="@+id/button9"
                        android:text="@string/seven"
                        style="@style/button"
                />

                <Button
                        android:id="@+id/button10"
                        android:text="@string/eight"
                        style="@style/button"
                />

                <Button
                        android:id="@+id/button11"
                        android:text="@string/nine"
                        style="@style/button"
                />

                <Button
                        android:id="@+id/button12"
                        android:text="@string/multiply"
                        style="@style/button"
                />
            </TableRow>

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <Button
                        android:id="@+id/button13"
                        android:text="@string/period"
                        style="@style/button"
                />

                <Button
                        android:id="@+id/button14"
                        android:text="@string/zero"
                        style="@style/button"
                />

                <Button
                        android:id="@+id/button15"
                        android:text="@string/plusminus"
                        style="@style/button"
                />

                <Button
                        android:id="@+id/button16"
                        android:text="@string/divide"
                        style="@style/button"
                />
            </TableRow>
        </TableLayout>
        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="0dp"
                android:layout_gravity="center_horizontal">

            <TableRow android:layout_width="match_parent"
                      android:layout_height="match_parent">

                <Button
                        android:id="@+id/button17"
                        android:text="@string/reset"
                        style="@style/button"
                        android:layout_width="140dp"
                />
                <Button
                        android:id="@+id/button18"
                        android:text="@string/equals"
                        style="@style/button"
                        android:layout_width="140dp"
                />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>